feature: email service added, all auth features, routes and pages done, sign in with google left, also mockup dashboard added, ui is looking very juicy and sleek

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -30,10 +30,20 @@ instance/
 .DS_Store
 Thumbs.db
 
-# Testing
-.pytest_cache/
-.coverage
+# Unit test / coverage reports
 htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.pytest_cache
 
 # Logs
+logs/
 *.log
